--- a/src/days/01/main.html
+++ b/src/days/01/main.html
@@ -3,6 +3,22 @@
     <div class="container-fluid">
       <div class="row header">
         <div class="col-sm-12">
+          <p>Answer One: ${exampleOneAnswer}</p>
+          
+          <p>Answer Two: ${exampleTwoAnswer}</p>
+
+          <p>Answer Three: ${exampleThreeAnswer}</p>
+
+          <p>Answer Four: ${exampleFourAnswer}</p>
+
+          <p>Main Answer: ${mainAnswerAnswer}</p>
+          
+          <p>Part Two Answer One: ${partTwoExampleOneAnswer}</p>
+          <p>Part Two Answer Two: ${partTwoExampleTwoAnswer}</p>
+          <p>Part Two Answer Three: ${partTwoExampleThreeAnswer}</p>
+          <p>Part Two Answer Four: ${partTwoExampleFourAnswer}</p>
+
+          <p>Part Two Answer: ${partTwoAnswer}</p>
         </div>
       </div>
     </div>
